tests/baselines/reference/indexerConstraints.errors.txt
tests/cases/compiler/indexerConstraints.ts(17,5): error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
  Property 'b' is missing in type 'A' but required in type 'B'.
tests/cases/compiler/indexerConstraints.ts(25,5): error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
  Type 'A' is not assignable to type 'B'.
tests/cases/compiler/indexerConstraints.ts(33,5): error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
  Type 'A' is not assignable to type 'B'.
tests/cases/compiler/indexerConstraints.ts(41,5): error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
  Type 'A' is not assignable to type 'B'.


==== tests/cases/compiler/indexerConstraints.ts (4 errors) ====
    interface A { a: number; }
    interface B extends A { b: number; }
    
    // Good case
    interface D {
        [s: string]: A;
    }
    interface D {
        [n: number]: B;
    }
    
    // Bad case
    interface E {
        [s: string]: B;
    }
    interface E {
        [n: number]: A;
        ~~~~~~~~~~~~~~~
!!! error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
!!! error TS2413:   Property 'b' is missing in type 'A' but required in type 'B'.
!!! related TS2728 tests/cases/compiler/indexerConstraints.ts:2:25: 'b' is declared here.
    }
    
    // Inheritance
    interface F {
        [s: string]: B;
    }
    interface G extends F {
        [n: number]: A;
        ~~~~~~~~~~~~~~~
!!! error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
!!! error TS2413:   Type 'A' is not assignable to type 'B'.
    }
    
    // Other way
    interface H {
        [n: number]: A;
    }
    interface I extends H {
        [s: string]: B;
        ~~~~~~~~~~~~~~~
!!! error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
!!! error TS2413:   Type 'A' is not assignable to type 'B'.
    }
    
    // With hidden indexer
    interface J {
        [n: number]: {};
    }
    interface K extends J {
        [n: number]: A;
        ~~~~~~~~~~~~~~~
!!! error TS2413: 'number' index type 'A' is not assignable to 'string' index type 'B'.
!!! error TS2413:   Type 'A' is not assignable to type 'B'.
        [s: string]: B;
    }